// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload should render 1`] = `
<div>
  <div
    class="makeStyles-fileUploadItem-17"
  >
    <label
      class=" makeStyles-fileUploadWrapper-1"
    >
      <div
        data-testid="file-upload-wrapper"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="file-upload-input"
              multiple=""
              name="fileUploader"
              placeholder=""
              type="file"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-26 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-27"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-fileUpload-2"
      >
        <span
          class="makeStyles-fileUploadText-3"
        />
        <button
          aria-label="upload image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconUpload-19"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
              />
            </svg>
          </span>
        </button>
      </div>
    </label>
    <div
      class="makeStyles-fileList-4"
    >
      <div
        class=" makeStyles-fileItem-5  null"
      >
        <div
          class="makeStyles-fileRowTextContainer-11"
        >
          <div
            class="makeStyles-fileRowText-13"
          >
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileName-10 null"
            >
              test.png
            </span>
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileSize-14"
            >
              (13.29 KB)
            </span>
            <div />
          </div>
        </div>
        <button
          aria-label="remove image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-20"
          data-testid="file-upload-row"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class=" makeStyles-fileItem-5 makeStyles-fileItemUploading-6 null"
      >
        <div
          class="makeStyles-fileRowTextContainer-11"
        >
          <div
            class="makeStyles-fileRowText-13"
          >
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileName-10 null"
            >
              test-2.jpg
            </span>
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileSize-14"
            >
              (12.9 KB)
            </span>
            <div />
          </div>
        </div>
        <button
          aria-label="remove image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-20"
          data-testid="file-upload-row"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
        <progress
          class="makeStyles-fileItemProgress-8"
          max="100"
          value="0"
        />
      </div>
      <div
        class=" makeStyles-fileItem-5  null"
      >
        <div
          class="makeStyles-fileRowTextContainer-11"
        >
          <div
            class="makeStyles-fileRowText-13"
          >
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileName-10 null"
            >
              test-2.jpg
            </span>
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileSize-14"
            >
              (12.9 KB)
            </span>
            <div />
          </div>
        </div>
        <button
          aria-label="remove image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-20"
          data-testid="file-upload-row"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
      <div
        class=" makeStyles-fileItem-5  makeStyles-fileItemError-7"
      >
        <div
          class="makeStyles-fileRowTextContainer-11"
        >
          <div
            class="makeStyles-fileRowText-13"
          >
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileName-10 makeStyles-fileError-16"
            >
              test.exe
            </span>
            <span
              class="makeStyles-fileItemText-9 makeStyles-fileSize-14"
            >
              (400 B)
            </span>
            <div>
              <span
                class="makeStyles-fileItemText-9 makeStyles-fileMessage-15 makeStyles-fileRowError-12"
              >
                Server Error
              </span>
            </div>
          </div>
        </div>
        <button
          aria-label="remove image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconButton-20"
          data-testid="file-upload-row"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root MuiSvgIcon-fontSizeSmall"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`FileUpload should render empty 1`] = `
<div>
  <div
    class="makeStyles-fileUploadItem-46"
  >
    <label
      class=" makeStyles-fileUploadWrapper-30"
    >
      <div
        data-testid="file-upload-wrapper"
      >
        <div
          class="MuiFormControl-root MuiTextField-root MuiFormControl-fullWidth"
        >
          <div
            class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-fullWidth MuiInputBase-formControl"
          >
            <input
              aria-invalid="false"
              autocomplete="off"
              class="MuiInputBase-input MuiOutlinedInput-input"
              data-testid="file-upload-input"
              multiple=""
              name="fileUploader"
              placeholder=""
              type="file"
              value=""
            />
            <fieldset
              aria-hidden="true"
              class="PrivateNotchedOutline-root-55 MuiOutlinedInput-notchedOutline"
              style="padding-left: 8px;"
            >
              <legend
                class="PrivateNotchedOutline-legend-56"
                style="width: 0.01px;"
              >
                <span>
                  ​
                </span>
              </legend>
            </fieldset>
          </div>
        </div>
      </div>
      <div
        class="makeStyles-fileUpload-31"
      >
        <span
          class="makeStyles-fileUploadText-32"
        />
        <button
          aria-label="upload image"
          class="MuiButtonBase-root MuiIconButton-root makeStyles-iconUpload-48"
          tabindex="0"
          type="button"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
              />
            </svg>
          </span>
        </button>
      </div>
    </label>
    <div
      class="makeStyles-fileList-33"
    />
  </div>
</div>
`;
